--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -47,8 +47,8 @@
 
 
 
-    
-    <!-- <div class="kanban-board">
+
+<!-- <div class="kanban-board">
       <h2>Done</h2>
       <div
         cdkDropList
@@ -71,12 +71,12 @@
           
         </div>
       </div> -->
-  <!-- </div> -->
+<!-- </div> -->
 
 
 
 
-  <!-- <div class="root">
+<!-- <div class="root">
     <div class="navbar has-background-dark">
       <div class="navbar-brand">
         <div class="navbar-item">
@@ -156,54 +156,37 @@
 
 
 
+<div class="row pb-3 pt-3">
+  <div class="col-12 text-center">
+    <h2>All Tickets</h2>
+  </div>
+</div>
 
- 
-  <div class="kanban" cdkDropListGroup>
-    <div cdkDropListGroup >
-      <div class="example-container">
-        <h2>To do</h2>
-
-        <div
-          cdkDropList
-          [cdkDropListData]="todo"
-          class="example-list"
-          (cdkDropListDropped)="drop($event)"
-        >
-          <div class="example-box" *ngFor="let item of todo" cdkDrag>
-            {{ item.projectName }}
-          </div>
+<div class="kanban" cdkDropListGroup>
+  <div cdkDropListGroup>
+    <div class="example-container">
+      <h2>To Do ({{todo.length}})</h2>
+      <div cdkDropList [cdkDropListData]="todo" class="example-list" (cdkDropListDropped)="drop($event)">
+        <div class="example-box" *ngFor="let item of todo" cdkDrag>
+          {{ item.projectName }}
         </div>
       </div>
-      <div class="example-container">
-        <h2>In-Progress</h2>
-
-        <div
-          cdkDropList
-          [cdkDropListData]="Progress"
-          class="example-list"
-          (cdkDropListDropped)="drop($event)"
-        >
-          <div class="example-box" *ngFor="let item of Progress" cdkDrag>
-            {{ item.projectName }}
-          </div>
+    </div>
+    <div class="example-container">
+      <h2>In-Progress ({{Progress.length}})</h2>
+      <div cdkDropList [cdkDropListData]="Progress" class="example-list" (cdkDropListDropped)="drop($event)">
+        <div class="example-box" *ngFor="let item of Progress" cdkDrag>
+          {{ item.projectName }}
         </div>
       </div>
-      <div class="example-container">
-        <h2>Done</h2>
-
-        <div
-          cdkDropList
-          [cdkDropListData]="done"
-          class="example-list"
-          (cdkDropListDropped)="drop($event)"
-        >
-          <div class="example-box" *ngFor="let item of done" cdkDrag>
-            {{ item.projectName }}
-          </div>
+    </div>
+    <div class="example-container">
+      <h2>Done ({{done.length}})</h2>
+      <div cdkDropList [cdkDropListData]="done" class="example-list" (cdkDropListDropped)="drop($event)">
+        <div class="example-box" *ngFor="let item of done" cdkDrag>
+          {{ item.projectName }}
         </div>
       </div>
     </div>
   </div>
-
- 
-
+</div>
