changes in board and layout component

--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -1,161 +1,3 @@
-<!-- <div class="container">
-    <div class="row pb-3 pt-3">
-        <div class="col-12 text-center">
-            <h1>Jira Board</h1>
-        </div>
-    </div>
-    <div class="kanban-board">
-        <div class="column" (dragOver)="onDragOver($event)"  (drop)="onDrop($event,'To Do')">
-            <div class="column-header">To Do</div>
-            <div class="task" draggable="true" *ngFor="let item of filterTickets(status[0])" (dragstart)="onDragStart($event,item)">{{item.summary}}
-                <br>
-                {{item.assignedTo}}
-            </div>
-            
-        </div>
-        <div class="column" (dragOver)="onDragOver($event)"  (drop)="onDrop($event,'In Progress')">
-            <div class="column-header">In Progress</div>
-            <div class="task" draggable="true" *ngFor="let item of filterTickets(status[1])" (dragstart)="onDragStart($event,item)">{{item.summary}}
-                <br>
-                {{item.assignedTo}}
-            </div>
-        </div>
-        <div class="column" (dragOver)="onDragOver($event)" (drop)="onDrop($event,'Done')">
-            <div class="column-header">Done</div>
-            <div class="task" draggable="true" *ngFor="let item of filterTickets(status[2])" (dragstart)="onDragStart($event,item)">{{item.summary}}
-                <br>
-                {{item.assignedTo}}
-            </div>
-        </div>
-    </div>
-</div> -->
-
-
-
-
-<!-- <div cdkDropListGroup class="kanban-board">
-    <div *ngFor="let sta of status">
-      <h2>{{sta}}</h2>       
-        <div
-        cdkDropList
-        [cdkDropListData]="ticketsArray"        
-        (cdkDropListDropped)="drop($event)">      
-          <div  *ngFor="let item of filterTickets(sta)" cdkDrag>{{item.projectName}}</div>    
-      </div>
-    </div> -->
-
-
-
-
-
-<!-- <div class="kanban-board">
-      <h2>Done</h2>
-      <div
-        cdkDropList
-        [cdkDropListData]="doneList"
-        class="example-list"
-        (cdkDropListDropped)="drop($event)">
-        <div class="example-box" cdkDrag *ngFor="let item of doneList">{{item.projectName}}</div>        
-      </div>
-    </div>
-    <div class="example-container">
-        <h2>In Progress</h2>
-    
-        <div
-          cdkDropList
-          [cdkDropListData]="inProgressList"
-          class="example-list"
-          (cdkDropListDropped)="drop($event)">
-         
-            <div class="example-box" cdkDrag *ngFor="let item of inProgressList">{{item.projectName}}</div>
-          
-        </div>
-      </div> -->
-<!-- </div> -->
-
-
-
-
-<!-- <div class="root">
-    <div class="navbar has-background-dark">
-      <div class="navbar-brand">
-        <div class="navbar-item">
-          <h1 class="app-name has-gradient-text">kanban</h1>
-        </div>
-      </div>
-    </div>
-  
-    <div class="board">
-  
-      <div class="board-bar">
-        <p class="board-name">{{ board.name }}</p>
-      </div>
-  
-      <div class="board-wrapper">
-  
-        <div class="board-columns" cdkDropListGroup>
-          <div class="board-column" >
-  
-            <div class="column-title">
-              To Do
-            </div>
-  
-            <div class="tasks-container"
-            cdkDropList
-            #todos="cdkDropList"
-            [cdkDropListData]="todoList"
-            (cdkDropListDropped)="drop($event)"
-            [cdkDropListConnectedTo]="[todos,inprogresses,dones]">
-              <div class="task" *ngFor="let item of filterTickets('To Do')" cdkDrag>
-                {{ item.projectName }}
-              </div>
-            </div>
-          </div>
-          <div class="board-column" >
-  
-            <div class="column-title">
-              In Progress
-            </div>
-  
-            <div class="tasks-container"
-            cdkDropList
-            #inprogresses="cdkDropList"
-            [cdkDropListData]="inProgressList"
-            (cdkDropListDropped)="drop($event)"
-            [cdkDropListConnectedTo]="[todos,inprogresses,dones]">
-              <div class="task" *ngFor="let item of filterTickets('In Progress')" cdkDrag>
-                {{ item.projectName }}
-              </div>
-            </div>
-          </div>
-          <div class="board-column" >
-  
-            <div class="column-title">
-              Done
-            </div>
-  
-            <div class="tasks-container"
-            cdkDropList
-            #dones="cdkDropList"
-            [cdkDropListData]="doneList"
-            (cdkDropListDropped)="drop($event)"
-            [cdkDropListConnectedTo]="[todos,inprogresses,dones]">
-              <div class="task" *ngFor="let item of filterTickets('Done')" cdkDrag [cdkDragData]="item">
-                {{ item.projectName }}
-              </div>
-            </div>
-          </div>
-        </div>
-  
-      </div>
-  
-    </div>
-  
-  </div> -->
-
-
-
-
 <div class="row pb-3 pt-3">
   <div class="col-12 text-center">
     <h2>All Tickets</h2>
@@ -173,9 +15,9 @@
       </div>
     </div>
     <div class="example-container">
-      <h2>In-Progress ({{Progress.length}})</h2>
-      <div cdkDropList [cdkDropListData]="Progress" class="example-list" (cdkDropListDropped)="drop($event)">
-        <div class="example-box" *ngFor="let item of Progress" cdkDrag>
+      <h2>In-Progress ({{progress.length}})</h2>
+      <div cdkDropList [cdkDropListData]="progress" class="example-list" (cdkDropListDropped)="drop($event)">
+        <div class="example-box" *ngFor="let item of progress" cdkDrag>
           {{ item.projectName }}
         </div>
       </div>
