--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -10,81 +10,11 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark content-hover" href="#" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
-                        Your Work
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="board">board</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-dark content-hover" href="#" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
                         Projects
                     </a>
                     <ul class="dropdown-menu">
                         <li *ngFor="let project of projectList" (click)="setProject(project)"> <a
                                 class="dropdown-item">{{project.projectName}}</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-dark content-hover" href="#" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Filters
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-dark content-hover" href="#" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Dashboard
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-dark content-hover" href="#" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Teams
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-dark content-hover" href="#" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Apps
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -94,12 +24,11 @@
                 </li>
             </ul>
             <form class="d-flex" role="search">
-                <input class="form-control " type="search" placeholder="Search" aria-label="Search">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-dark">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-dark content-hover" href="#" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            user
+                            User
                         </a>
                         <ul class="dropdown-menu logUser">
                             <li><a class="dropdown-item" href="#">Profile</a></li>
@@ -156,11 +85,6 @@
                             <label for="summary">Summary <span class="text-danger">*</span></label>
                             <input type="text" id="summary" [(ngModel)]="ticketObj.summary" name="summary"
                                 class="form-control border inputbg border-2">
-                        </div>
-                        <div class="col-12 mb-3">
-                            <label for="des">Description</label>
-                            <textarea name="description" [(ngModel)]="ticketObj.description" id="des" cols="30" rows="5"
-                                class="form-control"></textarea>
                         </div>
                         <div class="col-6 mb-3">
                             <label for="fname">Assignee</label>
