--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -81,10 +81,18 @@
                                 <option *ngFor="let sta of status">{{sta}}</option>
                             </select>
                         </div>
-                        <div class="col-12  mb-3">
+                        <div class="col-8  mb-3">
                             <label for="summary">Summary <span class="text-danger">*</span></label>
                             <input type="text" id="summary" [(ngModel)]="ticketObj.summary" name="summary"
                                 class="form-control border inputbg border-2">
+                        </div>
+                        <div class="col-12 mb-3">
+                            <label for="Ticket Type">Ticket Type <span class="text-danger">*</span></label>
+                            <select name="Ticket Type" class="mb-1 form-select" id="Ticket Type"
+                                [(ngModel)]="ticketObj.ticketType">
+                                <option>Story</option>
+                                <option>Defect</option>
+                            </select>
                         </div>
                         <div class="col-6 mb-3">
                             <label for="fname">Assignee</label>
@@ -110,7 +118,7 @@
                 </div>
                 <div>
                     <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" (click)="onTicketCreate()">Create</button>
+                    <button type="button" class="btn btn-primary"  data-bs-dismiss="modal" (click)="onTicketCreate()">Create</button>
                 </div>
             </div>
         </div>
