--- a/src/app/components/board/board.component.css
+++ b/src/app/components/board/board.component.css
@@ -36,7 +36,7 @@
     box-sizing: border-box;
     cursor: move;
     background: white;
-    font-size: 14px;
+    font-size: 16px;
   } 
   .cdk-drag-preview {
     box-sizing: border-box;
@@ -58,3 +58,37 @@
   .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
+  h6{
+    display: flex;
+    justify-content: flex-start;
+  }
+  .bookmark-icon{
+    background-color:rgb(53, 236, 93);
+    color:white;
+    text-align: center;
+    padding-top: 1px;
+    margin-right: 4px;
+    cursor: pointer;
+   }
+   .centered-container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+    height: 100%;
+   
+}
+.project-name {
+  background-color: #3498db; 
+  padding: 5px 2px;  
+  margin: 5px 0;
+  color: #fff; 
+  border-radius: 4px; 
+  display: block;
+}
+.edit-icon{
+  color: white;
+  background-color: darkgreen;
+  margin: 0 4px;
+  cursor:pointer;
+}
