--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -7,33 +7,27 @@
   <div cdkDropListGroup>
     <div class="example-container" *ngFor="let status of status">
       <h2>{{ status }} ({{getTasksByStatus(status).length}})</h2>
-      <div
-        cdkDropList
-        [cdkDropListData]="getTasksByStatus(status)"
-        class="example-list"
-        (cdkDropListDropped)="drop($event)"
-      >
-        <div
-          class="example-box"
-          *ngFor="let item of getTasksByStatus(status)"
-          cdkDrag
-        >
-          {{ item.summary }}
-          <div style="display: flex;">
-            <div *ngIf="item.ticketType === 'Story'; else elseBlock">
-              <span class="text-danger">* </span>
+      <div cdkDropList [cdkDropListData]="getTasksByStatus(status)" class="example-list text-center"
+        (cdkDropListDropped)="drop($event)">
+        <div class="example-box" *ngFor="let item of getTasksByStatus(status)" cdkDrag>
+          <div class="centered-container">
+            <div>
+              <h6>{{ item.summary }}</h6>
+              <span class="project-name">{{item.projectName}} Project</span>
             </div>
-            <ng-template #elseBlock>             
-                <mat-icon class="text-danger">bookmark</mat-icon>
-            </ng-template>
-             <mat-icon (click)="editTicket(item)">edit</mat-icon>
-           
-            <mat-icon (click)="deleteTicket(item)">delete</mat-icon>
-          </div>         
+            <div style="display: flex;">
+              <div *ngIf="item.ticketType === 'Story'; else elseBlock">
+                <mat-icon class="bookmark-icon">bookmark</mat-icon>
+              </div>
+              <ng-template #elseBlock>
+                <mat-icon class="text-danger">report</mat-icon>
+              </ng-template>
+              <mat-icon (click)="editTicket(item)" class="edit-icon">edit</mat-icon>
+              <mat-icon (click)="deleteTicket(item)" class="text-danger" style="cursor: pointer;">delete</mat-icon>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-
-  
