--- a/src/app/components/edit-ticket/edit-ticket.component.html
+++ b/src/app/components/edit-ticket/edit-ticket.component.html
@@ -16,15 +16,21 @@
     <div class="row">
         <div class="col-4">
             <label for="sta">Status <span><i class="fa fa-circle-info"></i></span></label>
-            <input type="text" id="sta" class="mb-1 form-control" [(ngModel)]="selectedTicket.status">
+            <select name="status" id="sta" class="mb-1 form-select" [(ngModel)]="selectedTicket.status">
+                <option *ngFor="let sta of status">{{ sta }}</option>
+            </select>
         </div>
         <div class="col-8 mb-3">
             <label for="summary">Summary <span class="text-danger">*</span></label>
-            <input type="text" id="summary" [(ngModel)]="selectedTicket.summary" name="summary" class="form-control border inputbg border-2">
+            <input type="text" id="summary" [(ngModel)]="selectedTicket.summary" name="summary"
+                class="form-control border inputbg border-2">
         </div>
         <div class="col-12 mb-3">
-            <label for="ticketType">Ticket Type <span class="text-danger">*</span></label>
-            <input type="text" id="ticketType" class="mb-1 form-control" [(ngModel)]="selectedTicket.ticketType">
+            <label for="Ticket Type">Ticket Type <span class="text-danger">*</span></label>
+            <select name="Ticket Type" class="mb-1 form-select" id="Ticket Type" [(ngModel)]="selectedTicket.ticketType">
+                <option>Story</option>
+                <option>Defect</option>
+            </select>
         </div>
         <div class="col-6 mb-3">
             <label for="assignedTo">Assignee</label>
@@ -38,7 +44,8 @@
     <div class="row">
         <div class="col-12">
             <div>
-                <input type="checkbox" name="createAnotherIssue" id="createAnotherIssue"><span>Create another issue</span>
+                <input type="checkbox" name="createAnotherIssue" id="createAnotherIssue"><span>Create another
+                    issue</span>
             </div>
         </div>
     </div>
