--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -7,13 +7,13 @@
   <div cdkDropListGroup>
     <div class="example-container" *ngFor="let status of status">
       <h2>{{ status }} ({{getTasksByStatus(status).length}})</h2>
-      <div cdkDropList [cdkDropListData]="getTasksByStatus(status)" class="example-list text-center"
+      <div cdkDropList [cdkDropListData]="getTasksByStatus(status)" class="example-list"
         (cdkDropListDropped)="drop($event)">
         <div class="example-box" *ngFor="let item of getTasksByStatus(status)" cdkDrag>
           <div class="centered-container">
             <div>
               <h6>{{ item.summary }}</h6>
-              <span class="project-name">{{item.projectName}} Project</span>
+              <span class="project-name text-center">{{item.projectName}} Project</span>
             </div>
             <div style="display: flex;">
               <div *ngIf="item.ticketType === 'Story'; else elseBlock">
