--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -2,6 +2,9 @@
   <div class="col-12 text-center">
     <h2>All Tickets</h2>
   </div>
+ </div>
+ <div class="custom-autocomplete">
+  <app-autocomplete></app-autocomplete>
 </div>
 <div class="kanban" cdkDropListGroup>
   <div cdkDropListGroup>
