--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -21,10 +21,13 @@
                     <a class="nav-link active" aria-current="page">
                         <button class="btn bg-primary p-0 px-1  text-white " data-bs-toggle="modal"
                             data-bs-target="#exampleModal">Create</button></a>
-                </li>
+                </li> 
+                  
             </ul>
-        </div>
+
+        </div>   
     </div>
+   
 </nav>
 <div class="container-fluid pt-5">
     <router-outlet></router-outlet>
@@ -93,12 +96,8 @@
                     </div>
                 </div>
             </div>
-            <div class="modal-footer justify-content-between">
-                <div>
-                    <input type="checkbox" name="" id=""><span>
-                        Create another issue</span>
-                </div>
-                <div>
+            <div class="modal-footer">
+                <div style="display: flex;justify-content: flex-end;">
                     <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancel</button>
                     <button type="button" class="btn btn-primary"  data-bs-dismiss="modal" (click)="onTicketCreate()">Create</button>
                 </div>
