--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -1,11 +1,23 @@
-<div class="row pb-3 pt-3">
+<div class="row pt-3">
   <div class="col-12 text-center">
     <h2>All Tickets</h2>
   </div>
  </div>
- <div class="custom-autocomplete">
-  <app-autocomplete></app-autocomplete>
+
+ <div class="row">
+  <div class="col-md-12 text-center" style="height: 120px;display: flex;justify-content: center;">
+    <form class="form mt-5">
+      <div class="custom-dropdown" style="position: relative; width: 600px;">
+        <input class="form-control" placeholder="Type to search..." name="searchInput" [(ngModel)]="searchInput" (input)="filterTickets()">
+        <div class="dropdown-options" *ngIf="searchInput.length > 0">
+          <div *ngFor="let ticket of ticketsArray" class="option">{{ ticket.projectName }}</div>
+        </div>
+      </div>
+    </form>
+  </div>
 </div>
+
+
 <div class="kanban" cdkDropListGroup>
   <div cdkDropListGroup>
     <div class="example-container" *ngFor="let status of status">
