deleted auto-complete component

--- a/src/app/components/board/board.component.css
+++ b/src/app/components/board/board.component.css
@@ -93,6 +93,6 @@
   cursor:pointer;
 }
 .custom-autocomplete {
-  z-index: 1000 !important; /* Adjust the z-index value as needed */
+  z-index: 1000 !important; 
   
 }
