pushed recent code

--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -4,7 +4,7 @@
   </div>
  </div>
 
- <div class="row">
+ <!-- <div class="row">
   <div class="col-md-12 text-center" style="height: 120px;display: flex;justify-content: center;">
     <form class="form mt-5">
       <div class="custom-dropdown" style="position: relative; width: 600px;">
@@ -15,7 +15,7 @@
       </div>
     </form>
   </div>
-</div>
+</div> -->
 
 
 <div class="kanban" cdkDropListGroup>
