--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,106 +1,216 @@
 <nav class="navbar navbar-expand-lg bg-white fixed-top mynav pb-0 pt-0">
     <div class="container-fluid">
-        <a class="navbar-brand align-self-baseline" href="#"><i class="fa-solid fa-bars me-3"></i>Jira Software</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
-            aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-dark">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-dark content-hover" href="#" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Projects
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li *ngFor="let project of projectList" (click)="setProject(project)"> <a
-                                class="dropdown-item">{{project.projectName}}</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page">
-                        <button class="btn bg-primary p-0 px-1  text-white " data-bs-toggle="modal"
-                            data-bs-target="#exampleModal">Create</button></a>
-                </li>           
-            </ul> 
-        </div> 
+      <a class="navbar-brand align-self-baseline" href="#"
+        ><i class="fa-solid fa-bars me-3"></i>Jira Software</a
+      >
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarTogglerDemo02"
+        aria-controls="navbarTogglerDemo02"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-dark">
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle text-dark content-hover"
+              href="#"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Projects
+            </a>
+            <ul class="dropdown-menu">
+              <li
+                *ngFor="let project of projectList"
+                (click)="setProject(project)"
+              >
+                <a class="dropdown-item">{{ project.projectName }}</a>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page">
+              <button
+                class="btn bg-primary p-0 px-1 text-white"
+                data-bs-toggle="modal"
+                data-bs-target="#exampleModal"
+              >
+                Create
+              </button></a
+            >
+          </li>
+  
+          <div class="row">
+            <div class="col-md-12 text-center">
+              <form class="form m-1">
+                <div
+                  class="custom-dropdown"
+                  style="position: relative; width: 400px"
+                >
+                  <input
+                    class="form-control icon"
+                    placeholder="Type to search..."
+                    name="searchInput"
+                    [(ngModel)]="searchInput"
+                    (input)="filterTickets()"
+                  />
+                  <div class="dropdown-options" *ngIf="searchInput.length > 0">
+                    <div *ngFor="let ticket of ticketsArray" class="option">
+                      {{ ticket.projectName }}
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </ul>
+      </div>
     </div>
-
-</nav>
-<div class="container-fluid pt-5">
+  </nav>
+  <div class="container-fluid pt-5">
     <router-outlet></router-outlet>
-</div>
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
-        <div class="modal-content">
-            <div class="modal-header d-flex ">
-                <div>
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Create Issue</h1>
-                </div>
-                <div>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-            </div>
-            <div class="modal-body">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-4">
-                            <div class="project-model">
-                                <label for="projectName">Project <span class="text-danger">*</span></label>
-                                <select name="projectName" id="projectName" class="form-select mb-3"
-                                    [(ngModel)]="ticketObj.projectName">
-                                    <option *ngFor="let project of projectList" [value]="project.projectName">
-                                        {{project.projectName}}</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-4">
-                            <label for="sta">Status <span><i class="fa fa-circle-info"></i></span></label>
-                            <select name="status" id="sta" class="mb-1 form-select" [(ngModel)]="ticketObj.status"
-                                [value]="ticketObj.status">
-                                <option *ngFor="let sta of status">{{sta}}</option>
-                            </select>
-                        </div>
-                        <div class="col-8  mb-3">
-                            <label for="summary">Summary <span class="text-danger">*</span></label>
-                            <input type="text" id="summary" [(ngModel)]="ticketObj.summary" name="summary"
-                                class="form-control border inputbg border-2">
-                        </div>
-                        <div class="col-12 mb-3">
-                            <label for="Ticket Type">Ticket Type <span class="text-danger">*</span></label>
-                            <select name="Ticket Type" class="mb-1 form-select" id="Ticket Type"
-                                [(ngModel)]="ticketObj.ticketType">
-                                <option>Story</option>
-                                <option>Defect</option>
-                            </select>
-                        </div>
-                        <div class="col-6 mb-3">
-                            <label for="fname">Assignee</label>
-                            <select name="assignedTo" class="mb-1 form-select" id="fname"
-                                [(ngModel)]="ticketObj.assignedTo">
-                                <option *ngFor="let user of userList">{{user.fullName}}</option>
-                            </select>
-                        </div>
-                        <div class="col-6 mb-3">
-                            <label for="fullname">Reporter</label>
-                            <select name="createdBy" [(ngModel)]="ticketObj.createdBy" id="fullname"
-                                class="mb-1 form-select">
-                                <option *ngFor="let user of userList">{{user.fullName}}</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <div style="display: flex;justify-content: flex-end;">
-                    <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal"
-                        (click)="onTicketCreate()">Create</button>
-                </div>
-            </div>
+  </div>
+  <div
+    class="modal fade"
+    id="exampleModal"
+    tabindex="-1"
+    aria-labelledby="exampleModalLabel"
+    aria-hidden="true"
+  >
+    <div
+      class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg"
+    >
+      <div class="modal-content">
+        <div class="modal-header d-flex">
+          <div>
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Create Issue</h1>
+          </div>
+          <div>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
         </div>
+        <div class="modal-body">
+          <div class="container">
+            <div class="row">
+              <div class="col-4">
+                <div class="project-model">
+                  <label for="projectName"
+                    >Project <span class="text-danger">*</span></label
+                  >
+                  <select
+                    name="projectName"
+                    id="projectName"
+                    class="form-select mb-3"
+                    [(ngModel)]="ticketObj.projectName"
+                  >
+                    <option
+                      *ngFor="let project of projectList"
+                      [value]="project.projectName"
+                    >
+                      {{ project.projectName }}
+                    </option>
+                  </select>
+                </div>
+              </div>
+            </div>
+            <hr />
+            <div class="row">
+              <div class="col-4">
+                <label for="sta"
+                  >Status <span><i class="fa fa-circle-info"></i></span
+                ></label>
+                <select
+                  name="status"
+                  id="sta"
+                  class="mb-1 form-select"
+                  [(ngModel)]="ticketObj.status"
+                  [value]="ticketObj.status"
+                >
+                  <option *ngFor="let sta of status">{{ sta }}</option>
+                </select>
+              </div>
+              <div class="col-8 mb-3">
+                <label for="summary"
+                  >Summary <span class="text-danger">*</span></label
+                >
+                <input
+                  type="text"
+                  id="summary"
+                  [(ngModel)]="ticketObj.summary"
+                  name="summary"
+                  class="form-control border inputbg border-2"
+                />
+              </div>
+              <div class="col-12 mb-3">
+                <label for="Ticket Type"
+                  >Ticket Type <span class="text-danger">*</span></label
+                >
+                <select
+                  name="Ticket Type"
+                  class="mb-1 form-select"
+                  id="Ticket Type"
+                  [(ngModel)]="ticketObj.ticketType"
+                >
+                  <option>Story</option>
+                  <option>Defect</option>
+                </select>
+              </div>
+              <div class="col-6 mb-3">
+                <label for="fname">Assignee</label>
+                <select
+                  name="assignedTo"
+                  class="mb-1 form-select"
+                  id="fname"
+                  [(ngModel)]="ticketObj.assignedTo"
+                >
+                  <option *ngFor="let user of userList">
+                    {{ user.fullName }}
+                  </option>
+                </select>
+              </div>
+              <div class="col-6 mb-3">
+                <label for="fullname">Reporter</label>
+                <select
+                  name="createdBy"
+                  [(ngModel)]="ticketObj.createdBy"
+                  id="fullname"
+                  class="mb-1 form-select"
+                >
+                  <option *ngFor="let user of userList">
+                    {{ user.fullName }}
+                  </option>
+                </select>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <div style="display: flex; justify-content: flex-end">
+            <button type="button" class="btn btn-light" data-bs-dismiss="modal">
+              Cancel
+            </button>
+            <button
+              type="button"
+              class="btn btn-primary"
+              data-bs-dismiss="modal"
+              (click)="onTicketCreate()"
+            >
+              Create
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
+  </div>
