search is added

--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -20,7 +20,7 @@
   </div>
 </div> -->
 
-<div class="row">
+<!-- <div class="row">
   <div class="col-md-12 text-center">
     <form class="form m-1">
       <div
@@ -42,7 +42,7 @@
       </div>
     </form>
   </div>
-</div>
+</div> -->
 
 
 
