--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -1,52 +1,8 @@
 <div class="row pt-3">
   <div class="col-12 text-center">
-    <h2>All Tickets</h2>
+    <h2 i18n>All Tickets</h2>
   </div>
 </div>
-
-
-
-<!-- <div class="row">
-  <div class="col-md-12 text-center" style="height: 120px; display: flex; justify-content: center;">
-    <div class="col-md-12">
-      <form class="form mt-5">
-        <input type="text" class="form-control" list="datalistOptions" id="exampleDataList"
-          placeholder="Type to search..." name="searchInput" [(ngModel)]="searchInput" (input)="filterTickets()">
-          <datalist id="datalistOptions" class="dropdown-options">
-          <option *ngFor="let ticket of ticketsArray; trackBy: trackByFn" class="option">{{ ticket.projectName }}</option>
-        </datalist>
-      </form>
-    </div>
-  </div>
-</div> -->
-
-<!-- <div class="row">
-  <div class="col-md-12 text-center">
-    <form class="form m-1">
-      <div
-        class="custom-dropdown"
-        style="position: relative; width: 400px"
-      >
-        <input
-          class="form-control icon"
-          placeholder="Type to search..."
-          name="searchInput"
-          [(ngModel)]="searchInput"
-          (input)="filterTickets()"
-        />
-        <div class="dropdown-options" *ngIf="searchInput.length > 0">
-          <div *ngFor="let ticket of ticketsArray" class="option">
-            {{ ticket.projectName }}
-          </div>
-        </div>
-      </div>
-    </form>
-  </div>
-</div> -->
-
-
-
-
 
 <div class="kanban" cdkDropListGroup>
   <div cdkDropListGroup>
