--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -37,7 +37,9 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">New Project</h4>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal">
+                    <span class="visually-hidden">Close</span>
+                  </button>
             </div>
             <div class="modal-body">
                 <div class="row" style="margin-bottom: 10px;">
