--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,11 +1,11 @@
 <div class="row">
-    <div class="col-12 text-end">
+    <div class="col-12 text-center my-4">
         <button class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#myModal">Create New
             Project</button>
     </div>
 </div>
 <div class="row">
-    <div class="col-3" *ngFor="let project of projectList">
+    <div class="col-3 m-3" *ngFor="let project of projectList">
         <div class="card">
             <div class="card-header bg-success">
                 {{project.shortName}}
@@ -38,7 +38,9 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">New Project</h4>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal">
+                    <span class="visually-hidden">Close</span>
+                  </button>
             </div>
             <div class="modal-body">
                 <div class="row" style="margin-bottom: 10px;">
