--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -1,6 +1,6 @@
 <div class="row pt-3">
   <div class="col-12 text-center">
-    <h2>All Tickets</h2>
+    <h2>{{"allTickets" | translate}}</h2>
   </div>
 </div>
 
