--- a/src/app/components/board/board.component.css
+++ b/src/app/components/board/board.component.css
@@ -97,3 +97,11 @@
   z-index: 1000 !important; 
   
 }
+.assignee{
+  background-color: gray;
+  cursor: pointer;
+  border-radius: 6px;
+  padding: 7px;
+  color: white;
+  margin: 5px;
+}
