--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-white fixed-top mynav pb-0 pt-0">
   <div class="container-fluid">
-    <a class="navbar-brand align-self-baseline" href="#"><i class="fa-solid fa-bars me-3"></i>{{"Title" | translate}}</a>
+    <a class="navbar-brand align-self-baseline" href="#"><i class="fa-solid fa-bars me-3"></i>{{"Title" |
+      translate}}</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
       aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -10,28 +11,29 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle text-dark content-hover" href="#" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
-           {{"projects" | translate}}
+            {{"projects" | translate}}
           </a>
           <ul class="dropdown-menu">
-            <li *ngFor="let project of projectList" (click)="setProject(project)" (keyup.enter)="setProject(project)" tabindex="0">
+            <li *ngFor="let project of projectList" (click)="setProject(project)" (keyup.enter)="setProject(project)"
+              tabindex="0">
               <a class="dropdown-item">{{ project.projectName }}</a>
             </li>
           </ul>
-                 
         </li>
+        <!-- Create issue button -->
         <li class="nav-item">
           <a class="nav-link active" aria-current="page">
             <button class="btn bg-primary p-0 px-1 text-white" data-bs-toggle="modal" data-bs-target="#exampleModal">
               {{"crtbtn"|translate}}
             </button></a>
         </li>
-
+        <!-- Input field to search tickets based on project name  -->
         <div class="row">
           <div class="col-md-12 text-center">
             <form class="form m-1">
               <div class="custom-dropdown" style="position: relative; width: 400px">
                 <input class="form-control icon" placeholder="Type to search..." name="searchInput"
-                  [(ngModel)]="searchInput" (input)="filterTickets()" autocomplete="off"/>
+                  [(ngModel)]="searchInput" (input)="filterTickets()" autocomplete="off" />
                 <div class="dropdown-options" *ngIf="searchInput.trim().length > 0">
                   <div *ngFor="let ticket of ticketsArray" class="option">
                     {{ ticket.projectName }}
@@ -41,33 +43,22 @@
             </form>
           </div>
         </div>
-        
       </ul>
-
-
-
-      <select
-        class="form-select lang-select"
-        (change)="changeLang($event)"
-        name=""
-        id=""
-      >
+      <!--section to select different languages -->
+      <select class="form-select lang-select" (change)="changeLang($event)" name="" id="">
         <option [selected]="lang === 'en'" value="en">English</option>
         <option [selected]="lang === 'fr'" value="fr">French</option>
         <option [selected]="lang === 'es'" value="es">Spanish</option>
       </select>
 
-
-
     </div>
   </div>
 </nav>
 
-
-
 <div class="container-fluid pt-5">
   <router-outlet></router-outlet>
 </div>
+<!-- Create ticket Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
     <div class="modal-content">
@@ -137,10 +128,10 @@
       <div class="modal-footer">
         <div style="display: flex; justify-content: flex-end">
           <button type="button" class="btn btn-light" data-bs-dismiss="modal">
-           {{"cancel"|translate}}
+            {{"cancel"|translate}}
           </button>
           <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="onTicketCreate()">
-           {{"crtbtn"|translate}}
+            {{"crtbtn"|translate}}
           </button>
         </div>
       </div>
