pushed localize changes

--- a/src/app/components/edit-ticket/edit-ticket.component.html
+++ b/src/app/components/edit-ticket/edit-ticket.component.html
@@ -64,7 +64,7 @@
         <div class="modal-content">
             <div class="modal-header d-flex">
                 <div>
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Are you sure you want to save this Ticket</h1>
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">{{"saveConfirmation"|translate}}</h1>
                 </div>
                 <div>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
