--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -3,9 +3,9 @@
     <h2>{{"allTickets" | translate}}</h2>
   </div>
 </div>
-<div style="margin-left: 200px;margin-bottom: 40px;margin-top: 30px;">
-  <span class="assignee" (click)="filterByAssignee('')">All</span>
-  <span *ngFor="let assignee of assignees" class="assignee" (click)="filterByAssignee(assignee)">{{assignee}}</span>
+<div style="margin-left: 200px; margin-bottom: 40px; margin-top: 30px;">
+  <span class="assignee" (click)="filterByAssignee('')" (keydown.enter)="filterByAssignee('')" tabindex="0">{{"all" | translate}}</span>
+  <span *ngFor="let assignee of assignees" class="assignee" (click)="filterByAssignee(assignee)" (keydown.enter)="filterByAssignee(assignee)" tabindex="0">{{assignee}}</span>
 </div>
 <div class="kanban" cdkDropListGroup>
   <div cdkDropListGroup>
@@ -21,15 +21,13 @@
             </div>
             <div style="display: flex;">
               <div *ngIf="item.ticketType === 'Story'; else elseBlock">
-                <mat-icon class="bookmark-icon">bookmark</mat-icon>
+                <mat-icon class="bookmark-icon" (click)="setEditItem(item)" (keydown.enter)="setEditItem(item)" tabindex="0">bookmark</mat-icon>
               </div>
               <ng-template #elseBlock>
-                <mat-icon class="text-danger">report</mat-icon>
+                <mat-icon class="text-danger" (click)="setdeleteItem(item)" (keydown.enter)="setdeleteItem(item)" tabindex="0">report</mat-icon>
               </ng-template>
-              <mat-icon class="edit-icon" data-bs-toggle="modal" data-bs-target="#editModal"
-                (click)="setEditItem(item)">edit</mat-icon>
-              <mat-icon class="text-danger" style="cursor: pointer;" mat-raised-button data-bs-toggle="modal"
-                data-bs-target="#deleteModal" (click)="setdeleteItem(item)">delete</mat-icon>
+              <mat-icon class="edit-icon" data-bs-toggle="modal" data-bs-target="#editModal" (click)="setEditItem(item)" (keydown.enter)="setEditItem(item)" tabindex="0">edit</mat-icon>
+              <mat-icon class="text-danger" style="cursor: pointer;" mat-raised-button data-bs-toggle="modal" data-bs-target="#deleteModal" (click)="setdeleteItem(item)" (keydown.enter)="setdeleteItem(item)" tabindex="0">delete</mat-icon>
             </div>
           </div>
         </div>
@@ -45,8 +43,7 @@
     <div class="modal-content">
       <div class="modal-header d-flex">
         <div>
-          <h1 class="modal-title fs-5" id="exampleModalLabel">{{setModal==="editModal"? "Are you sure you want to edit
-            this Ticket" : "Are you sure you want to delete this Ticket"}}</h1>
+          <h1 class="modal-title fs-5" id="exampleModalLabel">{{setModal==="editModal"? {{"editConfirmation"|translate}} : {{"deleteConfirmation"|translate}}}}</h1>
         </div>
         <div>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
