pushed recent changes

--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -61,10 +61,10 @@
       <div class="modal-footer">
         <div style="display: flex; justify-content: flex-end">
           <button type="button" class="btn btn-light" data-bs-dismiss="modal">
-            No
+           {{"no"|translate}}
           </button>
           <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="confirmAction()">
-            Yes
+           {{"yes"|translate}}
           </button>
         </div>
       </div>
